--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-235.0KB/s(Youtube:不良林), server: 120.233.150.146, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇳 中国-527.8KB/s(Youtube:不良林), server: 111.45.22.136, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇨🇳 中国-217.5KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-234.0KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
-  - {name: 🇨🇳 中国-322.5KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-372.6KB/s(Youtube:不良林), server: 116.129.254.177, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇬🇧 英国-591.9KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-4.03MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.64MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.11MB/s(Youtube:不良林), server: 104.224.141.225, port: 700, type: ss, cipher: chacha20-ietf-poly1305, password: bSdsFZtHhbAl}
+  - {name: 🇺🇸 美国-1.80MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-1.10MB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
   - {name: 🇩🇪 德国-2.63MB/s(Youtube:不良林), server: 162.55.231.78, port: 443, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
   - {name: 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇨🇳 中国-445.6KB/s(Youtube:不良林), server: 116.129.254.177, port: 65048, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇦 加拿大-776.0KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-463.4KB/s(Youtube:不良林), server: 36.134.156.5, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-235.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-217.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-234.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-372.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-591.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.10MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.63MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-445.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-776.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-235.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-217.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-234.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-372.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-591.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.10MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.63MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-445.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-776.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-235.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-217.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-234.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-372.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-591.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.10MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.63MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-445.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-776.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-235.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-217.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-234.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-372.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-591.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.10MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.63MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-445.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-776.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-235.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-217.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-234.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-372.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-591.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.10MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.63MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-445.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-776.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-235.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-217.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-234.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-372.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-591.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.10MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.63MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-445.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-776.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-235.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-217.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-234.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-372.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-591.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.10MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.63MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-445.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-776.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
