--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.96MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.73MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-190.0KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-309.5KB/s(Youtube:不良林), server: 111.45.22.136, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇺🇸 美国-340.5KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
   - {name: 🇫🇷 法国-1.69MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-300.0KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-723.5KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-854.3KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇭🇰 香港-2.37MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇨🇳 中国-421.9KB/s(Youtube:不良林), server: 116.129.254.177, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-328.2KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-4.51MB/s(Youtube:不良林), server: hnyd.52147.top, port: 30130, type: trojan, password: 2778263c-486d-4af8-9ba4-25fc536b5bac, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.45MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.14MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.34MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.58MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-639.1KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-190.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-340.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-723.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-854.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-421.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-328.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.14MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-639.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-190.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-340.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-723.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-854.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-421.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-328.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.14MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-639.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-190.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-340.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-723.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-854.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-421.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-328.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.14MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-639.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.37MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-190.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-340.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-723.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-854.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-421.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-328.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.14MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-639.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-190.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-340.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-723.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-854.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-421.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-328.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.14MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-639.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-190.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-340.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-723.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-854.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-421.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-328.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.14MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-639.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-190.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-340.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-723.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-854.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-421.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-328.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.14MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-639.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
